# Test-2

./: .gitignore  README.md  pyproject.toml  requirements.txt
accounting/: README.md  __init__.py  accounts.py  allocation.py  bootstrap.py  cashbook.py  cli.py  db.py  ledger.py  models.py  money.py  vat.py
accounting/importers/: __init__.py  base.py  csv_importer.py  pdf_importer.py
accounting/reports/: __init__.py  statements.py
chatgpt_export/: __init__.py  __main__.py  cli.py  drive.py  parser.py  render.py  sample.py  web.py
extractor/: README.md  extract-chatgpt.js
tests/: test_accounting_cashbook.py  test_accounting_ledger.py  test_accounting_money.py  test_parser.py  test_web.py
