[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "chatgpt-export"
version = "1.0.0"
description = "Extract ChatGPT conversations (including Project chats) and import them into Google Drive."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
dependencies = []

[project.optional-dependencies]
# The web portal.
web = [
    "Flask>=2.3.0",
    "google-api-python-client>=2.0.0",
    "google-auth>=2.0.0",
    "google-auth-oauthlib>=1.0.0",
    "google-auth-httplib2>=0.1.0",
]
# Just the Google Drive client (for the CLI's --upload-drive).
drive = [
    "google-api-python-client>=2.0.0",
    "google-auth>=2.0.0",
    "google-auth-oauthlib>=1.0.0",
    "google-auth-httplib2>=0.1.0",
]
dev = ["pytest>=7.0"]

[project.scripts]
chatgpt-export = "chatgpt_export.cli:main"
chatgpt-export-portal = "chatgpt_export.web:main"

[tool.setuptools]
packages = ["chatgpt_export"]
